<resources>
    <string name="app_name">Weather</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="My_Weather">My Weather</string>
    <string name="CelSign">°C</string>
    <string name="KelSign">°K</string>
    <string name="FehSign">°F</string>
    <string name="AddTOFavButton">Add To Favorite</string>
    <string name="FavDeleteBtn">Delete</string>
    <string name="LocationSettings">Location</string>
    <string name="LanguageSettings">Language</string>
    <string name="TempSettings">Tempreture Unit</string>
    <string name="SpeedUnit">Speed Unit</string>
    <string name="Sgps">GPS</string>
    <string name="SMap">Map</string>
    <string name="EN_Radio">English</string>
    <string name="AR_Radio">Arabic</string>
    <string name="Cel_Radio">Celsius     m/s</string>
    <string name="Kel_Radio">Kelvin     m/s</string>
    <string name="Feh_Radio">Fehrenhite  mi/h</string>
    <string name="Meter_Radio">m/s</string>
    <string name="Mile_Radio">mi/h</string>
    <string name="HomePressure">Pressure</string>
    <string name="HomeHumidity">Humidity</string>
    <string name="HomeWind">Wind</string>
    <string name="HomeUltraVilot">UltraVilot</string>
    <string name="HomeClouds">Clouds</string>
    <string name="HomeVisibility">Visibility</string>
    <string name="menu_home">Home</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_alerts">Alerts</string>
    <string name="menu_settings">Settings</string>
    <string name="visionM">m</string>
    <string name="dialogBtn">Ok</string>
    <string name="dialogProgress">Loading...</string>
    <string name="AlertFromBtn">From</string>
    <string name="AlertToBtn">To</string>
    <string name="AlertNotification">Notification</string>
    <string name="AlertAlarm">Alarm</string>
    <string name="Warning">Warning</string>
    <string name="Warning_Message" >Are you sure you want to delete this item?</string>
    <string name="Delete">DELETE</string>
    <string name="Cancel">Cancel</string>
</resources>