<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_morning_background"
    android:tag="settingFragment"
    tools:context=".settings.view.Settings">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="185dp"
        android:layout_height="190dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="3dp"
        android:alpha="0.8"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toStartOf="@+id/cardView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <RadioGroup
            android:id="@+id/LocationGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="10dp">

            <RadioButton
                android:id="@+id/gpsRadio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:minHeight="48dp"
                android:text="@string/Sgps"
                android:textColor="@color/textColor"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/mapRadio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:minHeight="48dp"
                android:text="@string/SMap"
                android:textColor="@color/textColor"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RadioGroup>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="185dp"
        android:layout_height="190dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="10dp"
        android:alpha="0.8"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/cardView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cardView2"
        app:layout_constraintTop_toTopOf="@+id/cardView2">

        <RadioGroup
            android:id="@+id/LanguageGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="10dp">

            <RadioButton
                android:id="@+id/EN_Radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/EN_Radio"
                android:textColor="@color/textColor"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/AR_Radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/AR_Radio"
                android:textColor="@color/textColor"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RadioGroup>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="285dp"
        android:layout_height="190dp"
        android:layout_marginTop="30dp"
        android:alpha="0.8"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <RadioGroup
            android:id="@+id/TempGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp">

            <RadioButton
                android:id="@+id/Cel_Radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/Cel_Radio"
                android:textColor="@color/textColor"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/Kel_Radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/Kel_Radio"
                android:textColor="@color/textColor"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/Feh_Radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/Feh_Radio"
                android:textColor="@color/textColor"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RadioGroup>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="serif"
        android:text="@string/LocationSettings"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/cardView2"
        app:layout_constraintStart_toStartOf="@+id/cardView2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="serif"
        android:text="@string/LanguageSettings"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/cardView3"
        app:layout_constraintStart_toStartOf="@+id/cardView3"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="serif"
        android:text="@string/TempSettings"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/cardView4"
        app:layout_constraintStart_toStartOf="@+id/cardView4"
        app:layout_constraintTop_toBottomOf="@+id/cardView2" />

</androidx.constraintlayout.widget.ConstraintLayout>