<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homeConstraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_columnWeight="3"
    tools:context=".home.view.Home">

    <TextView
        android:id="@+id/dateTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="cursive"
        android:textColor="@color/textColor"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/degeeTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="cursive"
        android:textColor="@color/textColor"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/countryTxt"
        app:layout_constraintStart_toStartOf="@+id/countryTxt"
        app:layout_constraintTop_toBottomOf="@+id/countryTxt" />

    <TextView
        android:id="@+id/countryTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:textColor="@color/textColor"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateTxt" />

    <TextView
        android:id="@+id/degreeType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:fontFamily="cursive"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/degeeTxt"
        app:layout_constraintTop_toTopOf="@+id/degeeTxt" />

    <ImageView
        android:id="@+id/weatherImage"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:src="@drawable/ic_launcher_foreground"
        app:layout_constraintBottom_toBottomOf="@+id/weatherStatus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/countryTxt"
        app:layout_constraintTop_toTopOf="@+id/countryTxt" />

    <TextView
        android:id="@+id/weatherStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="serif"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/degreeType"
        app:layout_constraintStart_toStartOf="@+id/degeeTxt"
        app:layout_constraintTop_toBottomOf="@+id/degeeTxt" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weatherStatus">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/hoursRV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                tools:itemCount="5" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.8"
                android:backgroundTint="@color/white"
                app:cardCornerRadius="15dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/daysRV"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="5dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    tools:itemCount="7" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:alpha="0.8"
                android:backgroundTint="@color/white"
                app:cardCornerRadius="20dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/barometer"
                        app:layout_constraintEnd_toStartOf="@+id/imageView5"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/pressureValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="cursive"
                        android:text="hpa"
                        android:textColor="#021340"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@+id/imageView3"
                        app:layout_constraintStart_toStartOf="@+id/imageView3"
                        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/HomePressure"
                        android:textColor="#021340"
                        app:layout_constraintEnd_toEndOf="@+id/pressureValue"
                        app:layout_constraintStart_toStartOf="@+id/pressureValue"
                        app:layout_constraintTop_toBottomOf="@+id/pressureValue" />

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="20dp"
                        android:src="@drawable/humidity"
                        app:layout_constraintEnd_toStartOf="@+id/imageView6"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/imageView3"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/humidityValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="cursive"
                        android:text="0%"
                        android:textColor="#021340"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@+id/imageView5"
                        app:layout_constraintStart_toStartOf="@+id/imageView5"
                        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="9dp"
                        android:text="@string/HomeHumidity"
                        android:textColor="#021340"
                        app:layout_constraintEnd_toEndOf="@+id/humidityValue"
                        app:layout_constraintStart_toStartOf="@+id/humidityValue"
                        app:layout_constraintTop_toBottomOf="@+id/humidityValue" />

                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/wind"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/imageView5"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/windValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="cursive"
                        android:text="m/s"
                        android:textColor="#021340"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@+id/imageView6"
                        app:layout_constraintStart_toStartOf="@+id/imageView6"
                        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

                    <TextView
                        android:id="@+id/textView15"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="9dp"
                        android:text="@string/HomeWind"
                        android:textColor="#021340"
                        app:layout_constraintEnd_toEndOf="@+id/windValue"
                        app:layout_constraintStart_toStartOf="@+id/windValue"
                        app:layout_constraintTop_toBottomOf="@+id/windValue" />

                    <ImageView
                        android:id="@+id/imageView7"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="20dp"
                        android:src="@drawable/newclouds"
                        app:layout_constraintEnd_toEndOf="@+id/textView13"
                        app:layout_constraintStart_toStartOf="@+id/textView13"
                        app:layout_constraintTop_toBottomOf="@+id/textView13" />

                    <ImageView
                        android:id="@+id/imageView8"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="20dp"
                        android:src="@drawable/uv"
                        app:layout_constraintEnd_toEndOf="@+id/textView11"
                        app:layout_constraintStart_toStartOf="@+id/textView11"
                        app:layout_constraintTop_toBottomOf="@+id/textView11" />

                    <ImageView
                        android:id="@+id/imageView9"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="20dp"
                        android:src="@drawable/visibility"
                        app:layout_constraintEnd_toEndOf="@+id/textView15"
                        app:layout_constraintStart_toStartOf="@+id/textView15"
                        app:layout_constraintTop_toBottomOf="@+id/textView15" />

                    <TextView
                        android:id="@+id/ultravilotValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="cursive"
                        android:text="0.0"
                        android:textColor="#021340"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@+id/imageView8"
                        app:layout_constraintStart_toStartOf="@+id/imageView8"
                        app:layout_constraintTop_toBottomOf="@+id/imageView8" />

                    <TextView
                        android:id="@+id/cloudValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="cursive"
                        android:text="0%"
                        android:textColor="#021340"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@+id/imageView7"
                        app:layout_constraintStart_toStartOf="@+id/imageView7"
                        app:layout_constraintTop_toBottomOf="@+id/imageView7" />

                    <TextView
                        android:id="@+id/visibilityValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="cursive"
                        android:text="@string/visionM"
                        android:textColor="#021340"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="@+id/imageView9"
                        app:layout_constraintStart_toStartOf="@+id/imageView9"
                        app:layout_constraintTop_toBottomOf="@+id/imageView9" />

                    <TextView
                        android:id="@+id/textView20"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/HomeUltraVilot"
                        android:textColor="#021340"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/ultravilotValue"
                        app:layout_constraintStart_toStartOf="@+id/ultravilotValue"
                        app:layout_constraintTop_toBottomOf="@+id/ultravilotValue" />

                    <TextView
                        android:id="@+id/textView21"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/HomeClouds"
                        android:textColor="#021340"
                        app:layout_constraintEnd_toEndOf="@+id/cloudValue"
                        app:layout_constraintStart_toStartOf="@+id/cloudValue"
                        app:layout_constraintTop_toBottomOf="@+id/cloudValue" />

                    <TextView
                        android:id="@+id/textView22"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/HomeVisibility"
                        android:textColor="#021340"
                        app:layout_constraintEnd_toEndOf="@+id/visibilityValue"
                        app:layout_constraintStart_toStartOf="@+id/visibilityValue"
                        app:layout_constraintTop_toBottomOf="@+id/visibilityValue" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>